# dwr-partnerships-report

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  generate-report.yml
data/: dwr_custom_taxonomy.csv  latest.csv  node_labels.csv
dwr_report/: __init__.py
dwr_report/charts/: __init__.py  networks.py  report_chart.py  treemaps.py
dwr_report/data/: loader.py  taxonomy.py
dwr_report/ingest/: loader.py  taxonomy.py
dwr_report/pipeline/: create_issue.py  generate_report.py
reports/: diff.json  index.html  network_bipartite.html  network_tripartite.html
src/: diff.py  generate_report.py  report_chart.py
templates/: network_bipartite.html  network_tripartite.html  report.html  treemap_coverage.html
tests/: conftest.py  test_create_issue.py  test_diff.py  test_generate_report.py  test_networks.py  test_taxonomy.py  test_treemaps.py  tests_loader.py
upload-ui/: index.html
