[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dwr-partnerships-report"
version = "0.1.0"
description = "Automated report generation for DWR partnership data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "plotly>=5.0",
    "jinja2>=3.0",
    "kaleido>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dwr_report*"]   # Only package dwr_report — ignore data/, reports/, etc.

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["dwr_report"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = false                  # Start permissive; tighten over time
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true   # Plotly/Jinja2 stubs are incomplete
files = [
    "dwr_report/pipeline/diff.py",
    "dwr_report/pipeline/generate_report.py",
    "dwr_report/ingest/loader.py",
    "dwr_report/ingest/taxonomy.py",
    "dwr_report/charts/treemaps.py",
    "dwr_report/charts/networks.py",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["."]
addopts    = "-v --tb=short --cov=dwr_report --cov-report=term-missing"

[tool.coverage.run]
source = ["dwr_report"]
omit   = ["tests/*"]